--- a/front-end/src/Styles/LOGIN/components/_nav.scss
+++ b/front-end/src/Styles/LOGIN/components/_nav.scss
@@ -3,8 +3,10 @@
     @include dsc();
 
     &--img {
-        width: 100%;
-        height: 300px;
+        width: 270px;
+        height: 280px;
+        margin-top: 20px;
+        
     }
 }
 
