--- a/front-end/src/Styles/LOGIN/pages/_connexion.scss
+++ b/front-end/src/Styles/LOGIN/pages/_connexion.scss
@@ -4,7 +4,7 @@
     background-color: white;
     box-shadow: $box-shadow;
     padding-bottom: 20px;
-
+border-radius: 25px;
     &--error {
 
         &--p {
