--- a/front-end/src/Styles/LOGIN/components/_nav.scss
+++ b/front-end/src/Styles/LOGIN/components/_nav.scss
@@ -20,11 +20,13 @@
         margin-right: 20px;
         color: $primary-color;
         text-decoration: none;
+        font-weight: bold;
     }
 
     &--conn {
         color: $primary-color;
         text-decoration: none;
+        font-weight: bold;
     }
 }
 
